--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# log files and scripts
+*.bat
+*.log
+*.sh
+
+# drafts and temp files
+*`*
+_*
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
