--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# ------------------------------------------------------------------------------
+# ZR Library - Web Package                                   zr-web/[.gitignore]
+# (c) balarabe@protonmail.com                                       License: MIT
+# ------------------------------------------------------------------------------
+
 # log files and scripts
 *.bat
 *.log
@@ -19,3 +24,5 @@ _*
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# end
